.k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bracelet
  namespace: bracelet
  labels:
    app: bracelet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bracelet
  template:
    metadata:
      labels:
        app: bracelet
    spec:
      containers:
        - name: bracelet
          image: nuriofernandez/bracelet:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            requests:
              memory: "90Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: bracelet-service
  namespace: bracelet
spec:
  selector:
    app: bracelet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
