.k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bracelet-ingress
  namespace: bracelet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: bracelet.k3s.glaucus.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bracelet-service
                port:
                  number: 80
